# soccer-rl-pso

./: soccer_ws.ttt
src/el_force/: CMakeLists.txt  package.xml
src/el_force/include/el_force/: el_force.hpp
src/el_force/src/: el_force.cpp
src/field_interpreter/: package.xml  setup.cfg  setup.py
src/field_interpreter/field_interpreter/: field_interpreter.py
src/field_interpreter_interfaces/: CMakeLists.txt  package.xml
src/field_interpreter_interfaces/srv/: GetRobotInRadius.srv
src/pso/: CMakeLists.txt  package.xml
src/rl_module/: package.xml  setup.cfg  setup.py
src/rl_module/rl_module/: __init__.py  model.py  model_trainer.py  replay_memory.py  rl_module.py  train.py
src/rl_module_interfaces/: CMakeLists.txt  package.xml
src/rl_module_interfaces/srv/: Inference.srv  RunSim.srv  UpdateModel.srv
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/launch/: attacker_launch.py
src/robot_controller/src/: attacker.cpp  defender.cpp
src/sfm/: CMakeLists.txt  package.xml
src/sfm/include/sfm/: sfm.hpp
src/sfm/src/: sfm.cpp
